kubernetes/prod/00-namespace.yaml
# Namespace Kubernetes pour l'environnement de production
# Un namespace isole les ressources : les pods "prod" et "dev" ne se voient pas
apiVersion: v1
kind: Namespace
metadata:
  name: prod
