kubernetes/prod/07-php-deployment.yaml
# Deployment PHP — version production (connecté à MySQL)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        - name: php-app
          image: cristellea/gestion-produits:latest
          imagePullPolicy: Always   # Toujours télécharger la dernière version
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads-storage
              mountPath: /var/www/html/uploads
          # Sonde de disponibilité : attend que Apache réponde avant d'envoyer du trafic
          readinessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
