kubernetes/prod/08-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: prod
spec:
  selector:
    app: php-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
